[gd_scene load_steps=4 format=3 uid="uid://d38tokv8xjspi"]

[ext_resource type="Script" path="res://Scenes/CharacterBody/character_body.gd" id="1_pa6d2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bmf1s"]
resource_local_to_scene = true
radius = 0.25
height = 1.75

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8j1un"]
resource_local_to_scene = true
radius = 0.25
height = 1.75
radial_segments = 4
rings = 4

[node name="CharacterBody" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_pa6d2")
JumpForce = null
Stiffness = null

[node name="FloorCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
target_position = Vector3(0, -0.45, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, 0)
shape = SubResource("CapsuleShape3D_bmf1s")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.938812, 0.34443, 0, -0.34443, 0.938812, 0, 2.88958, 8.70923)

[node name="TestMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, 0)
mesh = SubResource("CapsuleMesh_8j1un")

[node name="HeadPosNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
